[package]
name = "tools"
version = "0.1.0"
authors = ["mengjin <mengjin@sightp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# command line dep
structopt = "0.2.10"
# 命令行进度条
indicatif = "0.13.0"
# 日志
log = "0.4.0"
env_logger = "0.7.1"
# 日期
chrono = "0.4"
# base64
base64 = "0.11.0"
# http client
reqwest = "0.8.3"
# json
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"